# scraping-SIGBM

./: .gitignore  README.md  pyproject.toml  setup.py
data/: download_sigbm_2023-10-27.xlsx  download_sigbm_2023-10-28.xlsx  download_sigbm_2023-10-31.xlsx  download_sigbm_2023-11-02.xlsx  download_sigbm_2023-11-08.xlsx  download_sigbm_2023-11-11.xlsx  download_sigbm_2023-11-12.xlsx  download_sigbm_2023-11-13.xlsx  download_sigbm_2023-11-14.xlsx  download_sigbm_2023-11-15.xlsx  download_sigbm_2023-11-16.xlsx  download_sigbm_2023-11-17.xlsx  download_sigbm_2023-11-18.xlsx  download_sigbm_2023-11-19.xlsx  download_sigbm_2023-11-20.xlsx  download_sigbm_2023-11-21.xlsx  download_sigbm_2023-11-22.xlsx  download_sigbm_2023-11-23.xlsx  download_sigbm_2023-11-24.xlsx  download_sigbm_2023-11-25.xlsx  download_sigbm_2023-11-26.xlsx  download_sigbm_2023-11-27.xlsx  download_sigbm_2023-11-28.xlsx  download_sigbm_2023-11-29.xlsx  download_sigbm_2023-11-30.xlsx  download_sigbm_2023-12-01.xlsx  download_sigbm_2023-12-02.xlsx  download_sigbm_2023-12-03.xlsx  download_sigbm_2023-12-04.xlsx  download_sigbm_2023-12-05.xlsx  download_sigbm_2023-12-06.xlsx  (+320 more)
data-raw/: download_sigbm_2023-10-25.xlsx  download_sigbm_2023-10-26.xlsx  download_sigbm_2023-10-27.xlsx  download_sigbm_2023-10-29.xlsx  download_sigbm_2023-10-30.xlsx  download_sigbm_2023-11-01.xlsx  download_sigbm_2023-11-03.xlsx  download_sigbm_2023-11-04.xlsx  download_sigbm_2023-11-05.xlsx  download_sigbm_2023-11-06.xlsx  download_sigbm_2023-11-07.xlsx  download_sigbm_2023-11-09.xlsx  download_sigbm_2023-11-10.xlsx
(+11 files in other folders)
