[tool.poetry]
name = "sigbm"
version = "0.1.0"
description = "Pacote SIGBM"
authors = ["Mayara Daher <62572101+mayaradaher@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
openpyxl = "^3.1.2"
unidecode = "^1.3.7"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79